finished getting batches and historical ready

--- a/clickthru.ipynb
+++ b/clickthru.ipynb
@@ -742,15 +742,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "f39e34ea-7dd0-4885-8ec7-bfa612efb80d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_batch1 = df_batch1.drop(*drop_cols)\n",
+    "df_batch2 = df_batch2.drop(*drop_cols)\n",
+    "df_batch3 = df_batch3.drop(*drop_cols)\n",
+    "df_batch4 = df_batch4.drop(*drop_cols)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "id": "cc95a992-5cb3-4893-9e08-0bc0426b632c",
    "metadata": {},
    "outputs": [
@@ -763,14 +768,14 @@
     }
    ],
    "source": [
-    "df_original\\\n",
+    "df_batch1\\\n",
     "    .write.mode(\"overwrite\").option(\"header\",\"true\")\\\n",
-    "    .csv(\"s3a://go01-demo/cde-workshop/clickthrough/batch1_csv\")"
+    "    .csv(\"s3a://go01-demo/cde-workshop/clickthrough/batch01_csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 75,
    "id": "0bdfa946-6b76-4b2d-bbad-6bbdb11f2532",
    "metadata": {},
    "outputs": [
@@ -783,14 +788,14 @@
     }
    ],
    "source": [
-    "df_original\\\n",
+    "df_batch2\\\n",
     "    .write.mode(\"overwrite\").option(\"header\",\"true\")\\\n",
-    "    .csv(\"s3a://go01-demo/cde-workshop/clickthrough/batch2_csv\")"
+    "    .csv(\"s3a://go01-demo/cde-workshop/clickthrough/batch02_csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 76,
    "id": "d438595d-693c-4bc5-b970-10c72849f969",
    "metadata": {},
    "outputs": [
@@ -803,14 +808,14 @@
     }
    ],
    "source": [
-    "df_original\\\n",
+    "df_batch3\\\n",
     "    .write.mode(\"overwrite\").option(\"header\",\"true\")\\\n",
-    "    .csv(\"s3a://go01-demo/cde-workshop/clickthrough/batch3_csv\")"
+    "    .csv(\"s3a://go01-demo/cde-workshop/clickthrough/batch03_csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 77,
    "id": "9583d077-fc40-47a7-b15c-ca8a98951e8a",
    "metadata": {},
    "outputs": [
@@ -823,34 +828,143 @@
     }
    ],
    "source": [
-    "df_original\\\n",
+    "df_batch4\\\n",
     "    .write.mode(\"overwrite\").option(\"header\",\"true\")\\\n",
-    "    .csv(\"s3a://go01-demo/cde-workshop/clickthrough/batch4_csv\")"
+    "    .csv(\"s3a://go01-demo/cde-workshop/clickthrough/batch04_csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "18fa783c-00a3-4de7-8e6a-1f0369c53a0f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('id', 'string'),\n",
+       " ('click', 'string'),\n",
+       " ('hour', 'string'),\n",
+       " ('C1', 'string'),\n",
+       " ('banner_pos', 'string'),\n",
+       " ('site_id', 'string'),\n",
+       " ('site_domain', 'string'),\n",
+       " ('site_category', 'string'),\n",
+       " ('app_id', 'string'),\n",
+       " ('app_domain', 'string'),\n",
+       " ('app_category', 'string'),\n",
+       " ('device_id', 'string'),\n",
+       " ('device_ip', 'string'),\n",
+       " ('device_model', 'string'),\n",
+       " ('device_type', 'string'),\n",
+       " ('device_conn_type', 'string'),\n",
+       " ('C14', 'string'),\n",
+       " ('C15', 'string'),\n",
+       " ('C16', 'string'),\n",
+       " ('C17', 'string'),\n",
+       " ('C18', 'string'),\n",
+       " ('C19', 'string'),\n",
+       " ('C20', 'string'),\n",
+       " ('C21', 'string'),\n",
+       " ('converted_date', 'timestamp'),\n",
+       " ('year', 'int'),\n",
+       " ('month', 'int'),\n",
+       " ('day', 'int'),\n",
+       " ('dt_hour', 'int')]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_original.dtypes"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
+   "id": "11174ec7-e1fc-46ae-a987-8592b15c9f7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drop_cols = [\"converted_date\", \"year\", \"month\", \"day\", \"dt_hour\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "id": "7713cfa0-d907-4fc3-a7f2-bd57c1d585ba",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_original = df_original.drop(*drop_cols)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
+   "id": "96b2be0f-36e1-455d-a6f4-efb832c4d53c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('id', 'string'),\n",
+       " ('click', 'string'),\n",
+       " ('hour', 'string'),\n",
+       " ('C1', 'string'),\n",
+       " ('banner_pos', 'string'),\n",
+       " ('site_id', 'string'),\n",
+       " ('site_domain', 'string'),\n",
+       " ('site_category', 'string'),\n",
+       " ('app_id', 'string'),\n",
+       " ('app_domain', 'string'),\n",
+       " ('app_category', 'string'),\n",
+       " ('device_id', 'string'),\n",
+       " ('device_ip', 'string'),\n",
+       " ('device_model', 'string'),\n",
+       " ('device_type', 'string'),\n",
+       " ('device_conn_type', 'string'),\n",
+       " ('C14', 'string'),\n",
+       " ('C15', 'string'),\n",
+       " ('C16', 'string'),\n",
+       " ('C17', 'string'),\n",
+       " ('C18', 'string'),\n",
+       " ('C19', 'string'),\n",
+       " ('C20', 'string'),\n",
+       " ('C21', 'string')]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_original.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "id": "cd331f4f-ab58-4a8f-b27a-3421b384e6d3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df_original.repartition('day')\\\n",
+    "    .write.mode(\"overwrite\").option(\"header\",\"true\")\\\n",
+    "    .parquet(\"s3a://go01-demo/cde-workshop/clickthrough/historical\")"
+   ]
   },
   {
    "cell_type": "code",
