completed second producer

--- a/clickthru.ipynb
+++ b/clickthru.ipynb
@@ -42,8 +42,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import Javascript, HTML\n",
-    "import os\n",
     "import time\n",
     "import json\n",
     "import requests\n",
@@ -123,8 +121,7 @@
     "    .config(\"spark.dynamicAllocation.enabled\", \"true\")\\\n",
     "    .getOrCreate()\n",
     " #   .config(\"spark.driver.cores\", 4)\\\n",
-    " #   .config(\"spark.driver.memory\", \"8g\")\\\n",
-    "    "
+    " #   .config(\"spark.driver.memory\", \"8g\")\\"
    ]
   },
   {
