changed title in cell

--- a/CTproducer.ipynb
+++ b/CTproducer.ipynb
@@ -516,7 +516,7 @@
    "id": "17a7cbe4-bb77-43fb-a364-966a52ac82f5",
    "metadata": {},
    "source": [
-    "#### STRATEGY 2: Incremental Merge via Union and Coalesce"
+    "#### STRATEGY 2: Incremental Merge via Union and Repartition"
    ]
   },
   {
